Созданы файлы по бэм

--- a/source/index.html
+++ b/source/index.html
@@ -35,17 +35,17 @@
   <main class="main">
     <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
 
-    <section class="slider">
-      <button class="slider__arrow slider__arrow--prev"></button>
-      <div class="slider__central">
+    <section class="products-slider">
+      <button class="products-slider__arrow products-slider__arrow--prev"></button>
+      <div class="products-slider__central">
         <img src="./img/flat-white.png" alt="Decaf Flat White.">
-        <span class="slider__special">Новинка!</span>
-        <h2 class="slider__header">Декаф Флэт Уайт</h2>
-        <p class="slider__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
-        <div class="slider__prices">
-          <span class="slider__price-previous"><s>295₽</s></span>
-          <span class="slider__price">225₽</span>
-          <button class="slider__order">Заказать</button>
+        <span class="products-slider__special">Новинка!</span>
+        <h2 class="products-slider__header">Декаф Флэт Уайт</h2>
+        <p class="products-slider__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+        <div class="products-slider__prices">
+          <span class="products-slider__price-previous"><s>295₽</s></span>
+          <span class="products-slider__price">225₽</span>
+          <button class="products-slider__order">Заказать</button>
         </div>
       </div>
     </section>
