--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,12 @@
   <title>Интернет-магазин кофейных напитков Drink2Go</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+  <link rel="stylesheet" href="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.css">
 </head>
 <body class="page-body">
   <header class="main-header">
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <div class="main-nav__head">
         <a class="main-nav__logo" href="#">
           <picture>
@@ -38,7 +40,7 @@
           <button class="main-nav__burger"></button>
         </div>
       </div>
-      <ul class="main-nav__mobile-list main-nav__list--nojs">
+      <ul class="main-nav__mobile-list main-nav__mobile-list--nojs">
         <li class="main-nav__item main-nav__item--current">
           <a class="main-nav__link" href="#">Главная</a>
         </li>
@@ -62,9 +64,12 @@
       <button class="products-slider__arrow products-slider__arrow--prev"></button>
       <div class="products-slider__central">
         <picture>
-          <source media="(min-width: 1440px)" srcset="./img/flat-white-desktop.png">
-          <source media="(min-width: 768px)" srcset="./img/flat-white-tablet.png">
-          <img class="products-slider__image" src="./img/flat-white.png" alt="Decaf Flat White." width="280" height="280">
+          <source type="image/webp" media="(min-width: 1440px)" srcset="./img/flat-white-desktop.webp 1x, ./img/flat-white-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="./img/flat-white-tablet.webp 1x, ./img/flat-white-tablet@2x.webp 2x">
+          <source type="image/webp" srcset="./img/flat-white.webp 1x, /img/flat-white@2x.webp 2x">
+          <source media="(min-width: 1440px)" srcset="./img/flat-white-desktop.png 1x, ./img/flat-white-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="./img/flat-white-tablet.png 1x, ./img/flat-white-tablet@2x.png 2x">
+          <img class="products-slider__image" src="./img/flat-white.png" srcset="./img/flat-white@2x.png 2x" alt="Decaf Flat White." width="280" height="280">
         </picture>
         <div class="products-slider__description">
           <span class="products-slider__special">Новинка!</span>
@@ -73,7 +78,7 @@
           <div class="products-slider__prices">
             <span class="products-slider__price products-slider__price--previous"><s>295₽</s></span>
             <span class="products-slider__price">225₽</span>
-            <button class="products-slider__order">Заказать</button>
+            <button class="products-slider__order buttons">Заказать</button>
           </div>
         </div>
         <div class="products-slider__pagination">
@@ -117,8 +122,8 @@
           <legend class="catalog-form__header">Цена</legend>
           <div class="catalog-form__slider" id="slider"></div>
           <div class="catalog-form__prices">
-            <label for="from"><input class="catalog-form__price-input" type="number" id="from" name="from" placeholder="0"></label>
-            <label for="to"><input class="catalog-form__price-input" type="number" id="to" name="to" value="900"></label>
+            <label for="from"><input class="catalog-form__price-input catalog-form__price-input--from" type="number" id="from" name="from" placeholder="0"></label>
+            <label for="to"><input class="catalog-form__price-input catalog-form__price-input--to" type="number" id="to" name="to" value="900"></label>
           </div>
         </fieldset>
 
@@ -175,8 +180,8 @@
           </label>
         </fieldset>
         <div class="catalog-form__buttons">
-          <button class="catalog-form__button-submit" type="submit">Применить фильтр</button>
-          <button class="catalog-form__button-reset" type="reset">Сбросить фильтр</button>
+          <button class="catalog-form__button-submit buttons" type="submit">Применить фильтр</button>
+          <button class="catalog-form__button-reset buttons" type="reset">Сбросить фильтр</button>
         </div>
       </form>
 
@@ -185,63 +190,84 @@
           <h3 class="sort__header">Сортировка:</h3>
           <select class="sort__select" name="sort" id="sort">
             <option value="default">по умолчанию</option>
+            <option value="default">сначала дорогие</option>
+            <option value="default">сначала дешёвые</option>
+            <option value="default">высокий рейтинг</option>
           </select>
         </div>
 
         <div class="catalog__products products">
           <ul class="products__list">
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-1.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-1.webp 1x, ./img/products/coffee-can-1@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-1.png 1x" srcset="img/products/coffee-can-1@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-2.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-2.webp 1x, ./img/products/coffee-can-2@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-2.png 1x" srcset="img/products/coffee-can-2@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-3.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-3.webp 1x, ./img/products/coffee-can-3@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-3.png 1x" srcset="img/products/coffee-can-3@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-4.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-4.webp 1x, ./img/products/coffee-can-4@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-4.png 1x" srcset="img/products/coffee-can-4@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-5.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-5.webp 1x, ./img/products/coffee-can-5@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-5.png 1x" srcset="img/products/coffee-can-5@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
             <li class="products__item">
-              <img class="products__image" src="img/products/coffee-can-6.png" alt="Декаф Флэт Уайт">
+              <picture>
+                <source type="image/webp" srcset="./img/products/coffee-can-6.webp 1x, ./img/products/coffee-can-6@2x.webp 2x">
+                <img class="products__image" src="./img/products/coffee-can-6.png 1x" srcset="img/products/coffee-can-6@2x.png 2x" alt="Декаф Флэт Уайт">
+              </picture>
               <h3 class="products__header">Декаф Флэт Уайт</h3>
               <p class="products__description">Кофе без кофеина из Эфиопии с натуральным фермерским молоком</p>
               <div class="products__to-cart">
                 <span class="products__price">225₽</span>
-                <button class="prodcuts__order">В корзину</button>
+                <button class="prodcuts__order buttons">В корзину</button>
               </div>
             </li>
           </ul>
@@ -258,13 +284,8 @@
     </section>
 
     <section class="location">
-      <div class="location__map">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/map-desktop.jpg">
-          <source media="(min-width: 768px)" srcset="img/map-tablet.jpg">
-          <img src="img/map.jpg" alt="карта.">
-        </picture>
-      </div>
+      <h2 class="visually-hidden">Наше местоположение</h2>
+      <div id="map" class="location__map"></div>
     </section>
   </main>
 
@@ -345,10 +366,11 @@
       Разработано в HTML Academy
       <svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M11.2151 5.75392L5.97184 2.49957V2.49875L5.97121 2.49916L5.97058 2.49875V2.49957L0.784854 5.75013V1.40658L6.00008 0.830884L11.2151 1.40658V5.75392ZM11.211 6.32987L9.12557 7.62344L5.98451 5.65607L5.97935 6.22863L8.66414 7.9096L8.20107 8.19683L5.98451 6.80853L5.97935 7.3811L7.72892 8.47648L7.31607 8.76717L7.30606 8.77351L5.98451 7.95383L5.97935 8.52631L6.8465 9.06404L5.96315 9.62244L0.796198 6.3886L5.97058 3.1139V3.11448L11.211 6.32987ZM11.2151 11.7713L6 15.0384L0.784854 11.7713V7.02542L5.97763 10.2796L5.98631 10.8693L2.42396 8.63702L2.41871 9.20959L5.99523 11.4728L6.00407 12.0782L2.42873 9.83883L2.42356 10.4113L6 12.6745L9.60624 10.4026V7.95712L11.2151 6.94552V11.7713ZM5.99984 -3.17891e-07L0 0.662267V12.2411L6 16L12 12.2411V0.662267L5.99984 -3.17891e-07Z" fill="#BDBDBD"/>
-        </svg>
+      </svg>
     </a>
   </footer>
-
-<script src="js/script.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
+  <script src="js/script.js" type="module"></script>
 </body>
 </html>
